--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
+    "dayjs": "^1.11.13",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
