--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -84,16 +84,17 @@ http {
 
         # 静态文件
         location / {
-            proxy_pass http://client/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
+            # proxy_pass http://client/;
+            # proxy_http_version 1.1;
+            # proxy_set_header Upgrade $http_upgrade;
+            # proxy_set_header Connection 'upgrade';
+            # proxy_set_header Host $host;
+            # proxy_set_header X-Real-IP $remote_addr;
+            # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            # proxy_set_header X-Forwarded-Proto $scheme;
+            # proxy_cache_bypass $http_upgrade;
 
+            root /usr/share/nginx/html;
             # 处理 SPA 路由
             try_files $uri $uri/ /index.html;
         }
