feat: 完善标签功能

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,6 +7,12 @@ WORKDIR /app
 # 安装 pnpm
 RUN npm install -g pnpm
 
+# 定义构建参数
+ARG BUILD_TIME
+ARG VERSION
+ENV BUILD_TIME=${BUILD_TIME}
+ENV VERSION=${VERSION}
+
 # 复制 package.json 和 pnpm-lock.yaml
 COPY package.json pnpm-lock.yaml* ./
 
@@ -19,6 +25,11 @@ COPY . .
 # 构建应用
 RUN pnpm build
 
+# 生成构建信息文件
+RUN echo "构建时间: ${BUILD_TIME}" > dist/build-info.txt && \
+    echo "版本: ${VERSION}" >> dist/build-info.txt && \
+    echo "构建ID: $(date +%s)" >> dist/build-info.txt
+
 # 生产阶段
 FROM nginx:alpine
 
@@ -27,6 +38,10 @@ COPY --from=builder /app/dist /usr/share/nginx/html
 
 # 复制 Nginx 配置
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# 添加健康检查
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD wget --no-verbose --tries=1 --spider http://localhost/ || exit 1
 
 # 暴露端口
 EXPOSE 80
