--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -21,15 +21,37 @@ server {
         application/atom+xml
         image/svg+xml;
 
-    # 静态资源缓存
+    # HTML 文件不缓存，确保每次都能获取最新版本
+    location ~* \.html$ {
+        expires -1;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
+    }
+
+    # 带hash的静态资源长期缓存
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
+        # 如果文件名包含hash，则长期缓存
+        if ($uri ~* "\.[a-f0-9]{8,}\.(js|css|png|jpg|jpeg|gif|ico|svg)$") {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+        # 否则不缓存
+        expires -1;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+    }
+
+    # manifest.json 不缓存
+    location ~* manifest\.json$ {
+        expires -1;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
     }
 
     # 处理 SPA 路由
     location / {
         try_files $uri $uri/ /index.html;
+        # 对于根路径，添加缓存控制
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Pragma "no-cache";
     }
 
     # 安全头
