--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
+    "@types/node": "^24.0.10",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
