--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -29,6 +29,9 @@ services:
     build:
       context: ../server
       dockerfile: Dockerfile
+      args:
+        BUILD_TIME: ${BUILD_TIME:-$(date -u +'%Y-%m-%dT%H:%M:%SZ')}
+        VERSION: ${VERSION:-1.0.0}
     container_name: question-bank-server
     restart: unless-stopped
     environment:
@@ -37,6 +40,8 @@ services:
       MONGODB_URI: mongodb://admin:yangchunrui2@mongodb:27017/question-bank?authSource=admin
       RATE_LIMIT_WINDOW_MS: 900000
       RATE_LIMIT_MAX_REQUESTS: 100
+      BUILD_TIME: ${BUILD_TIME:-$(date -u +'%Y-%m-%dT%H:%M:%SZ')}
+      VERSION: ${VERSION:-1.0.0}
     ports:
       - "5000:5000"
     depends_on:
@@ -50,10 +55,15 @@ services:
     build:
       context: ../client
       dockerfile: Dockerfile
+      args:
+        BUILD_TIME: ${BUILD_TIME:-$(date -u +'%Y-%m-%dT%H:%M:%SZ')}
+        VERSION: ${VERSION:-1.0.0}
     container_name: question-bank-client
     restart: unless-stopped
     environment:
       VITE_API_URL: http://localhost:5000/api
+      BUILD_TIME: ${BUILD_TIME:-$(date -u +'%Y-%m-%dT%H:%M:%SZ')}
+      VERSION: ${VERSION:-1.0.0}
     ports:
       - "3000:80"
     depends_on:
